# plum-backend

./: .env  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.old  .wakatime-project  Dockerfile  README.md  chat_history.json  chat_history.txt  entrypoint.sh  pyproject.toml  run.sh
api_tester/: main.py
data/extractions/: 1. COME CONFIGURARE L'EMAIL E LA PEC.pdf.md  10. COME GENERARE I BOLLETTINI TD 896 O TD 123.pdf.md  11. COME GENERARE I MAV.pdf.md  2. COME INSERIRE LE COORDINATE DELLA BUSTA DA LETTERE.pdf.md  3. COME INSERIRE LE COORDINATE DELLE ETICHETTE.pdf.md  4. COME INSERIRE I PARAMETRI DEI BOLLETTINI 123.pdf.md  5. COME CONFIGURARE I TESTI PERSONALIZZATI.pdf.md  6. COME INSERIRE I DATI DEL MITTENTE.pdf.md  7. COME IMPOSTARE I DATI PER LA,SPEDIZIONE.pdf.md  8.COME MODIFICARE I DATI DEL PROFILO.pdf.md  9. COSA SONO I DOCUMENTI DIGITALI E COME ACQUISTARLI.pdf.md
evaluation/: 1_generate_golden_set.ipynb  2_answer_generated.ipynb  3.1_evaluate_real_golden.ipynb  3_evaluate_generated.ipynb  evaluate_golden_set.ipynb
evaluation/data/: generated_golden_set_with_answers.csv  golden_set.csv  golden_set_with_answers.csv  p.json
notebooks/trials/: db.ipynb  docling.ipynb  embeddings.ipynb  extract_pdfs.ipynb  openai.ipynb  qdrant.ipynb  rag.ipynb  rag_v2.ipynb  rag_v3.ipynb
src/plum_chatbot/: __init__.py  main.py
src/plum_chatbot/agents/: agents.py  faq_agent.py  my_agent.py  rag_assistant.py
src/plum_chatbot/configs/: folders.py  logger.py  settings.py
src/plum_chatbot/datasources/: base_datasource.py  parameters.py  postgres_datasource.py  qdrant_datasource.py
src/plum_chatbot/di_containers/: datasources_containers.py
test/: 1_generate_golden_set.ipynb  2_answer_generated.ipynb  3.1_evaluate_real_golden.ipynb  3_evaluate_generated.ipynb
test/data/: generated_golden_set.csv  generated_golden_set_with_answers.csv  golden_set.csv  golden_set_with_answers.csv  p.json
(+14 files in other folders)
